--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/node": "^22.10.2",
 		"@types/sqlite3": "^3.1.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -20,6 +21,11 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@oslojs/crypto": "^1.0.1",
+		"@oslojs/encoding": "^1.1.0",
+		"@types/mysql": "^2.15.26",
+		"mysql2": "^3.11.5",
+		"mysql2-promise": "^0.1.4",
 		"sqlite3": "^5.1.7"
 	}
 }
