--- a/package.json
+++ b/package.json
@@ -14,19 +14,31 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/node": "^22.10.2",
-		"@types/sqlite3": "^3.1.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
+	"exports": {
+		"./package.json": "./package.json",
+		"./db/database": {
+			"types": "./package/db/database.d.ts",
+			"default": "./package/db/database.js"
+		}
+	},
+	"files": [
+		"package"
+	],
+	"typesVersions": {
+		">4.0": {
+			"db/database": [
+				"./package/db/database.d.ts"
+			]
+		}
+	},
 	"dependencies": {
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
-		"@types/mysql": "^2.15.26",
+		"isomorphic-dompurify": "^2.19.0",
 		"mysql2": "^3.11.5",
-		"mysql2-promise": "^0.1.4",
-		"sqlite3": "^5.1.7",
-		"svelte-purify": "^1.1.42"
+		"mysql2-promise": "^0.1.4"
 	}
 }
