--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"start": "node build/index.js"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -37,6 +38,7 @@
 		}
 	},
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.11",
 		"isomorphic-dompurify": "^2.19.0",
 		"mysql2": "^3.11.5",
 		"mysql2-promise": "^0.1.4"
